--- a/lib/custom_lints.yaml
+++ b/lib/custom_lints.yaml
@@ -37,6 +37,7 @@ linter:
     - prefer_typing_uninitialized_variables
     - provide_deprecation_message
     - secure_pubspec_urls
+    - simplify_variable_pattern
     - strict_top_level_inference
     - type_literal_in_constant_pattern
     - unintended_html_in_doc_comment
